# Urban-Elements-ReID-Challenge

./: .env_template  .gitignore  Makefile  README.md  TODOs.md  pyproject.toml  run_batch_cluster.sh  run_cluster.def
Code/Files for BoT/Results/: log.txt
Code/Files for BoT/configs/: softmax_triplet_UAM.yml  softmax_triplet_UAM_test.yml
Code/Files for BoT/modeling/backbones/: resnet.py
Code/Files for PAT/: 0_setup.ipynb  1_refinement_prompts.ipynb  1_train_embedding_model.ipynb  2_refinement_generation.ipynb  2_refinement_prompts.ipynb  3_refinement_generation.ipynb  3_refinement_generation.py  3_train_embedding_model.ipynb  4_rerank_and_submit.ipynb  4_rerank_and_submit_simple.ipynb  4a_rerank_and_submit_simple.ipynb  4b_rerank_and_submit_refinement_matching.ipynb  Run all.ipynb  Run all2.ipynb  build_DG_dataloader.py  run_all.py  temp do all.ipynb  update.py
Code/Files for PAT/config/: UAM_containers.yml  UrbanElementsReID_test.yml  UrbanElementsReID_test_embedding_r.yml  UrbanElementsReID_test_patplusplus.yml  UrbanElementsReID_test_reduced.yml  UrbanElementsReID_train.yml  UrbanElementsReID_train_embedding_r.yml  UrbanElementsReID_train_patplusplus.yml
Code/Files for PAT/data/: build_DG_dataloader.py
Code/Files for PAT/data/datasets/: UrbanElementsReID_test.py  __init__.py
Code/Files for PAT/model/: make_model.py
Code/Files for PAT/model/backbones/: vit_pytorch.py
Code/Files for PAT/utils/: metrics.py  re_ranking.py
UAM/: train_log.txt
